--- a/doc/index.adoc
+++ b/doc/index.adoc
@@ -27,9 +27,9 @@ No need to do so.
 
 === Testing
 
-1. First
-1. Second
-1. Third
+. First
+. Second
+. Third
 
 Now, don't do anything.
 
@@ -48,3 +48,4 @@ Enjoyed it.
 == References
 
 * This is what it took to do.
+* And another one.
