--- a/doc/README.adoc
+++ b/doc/README.adoc
@@ -14,6 +14,7 @@ GitHub Pages Test
 :icons: font
 :source-highlighter: rouge
 :stylesheet: asciidoc-style.css
+:stylesdir: styles
 
 ifdef::env-github[]
 :tip-caption: :bulb:
